feat: add integrations

--- a/apps/mobile/locales/de.json
+++ b/apps/mobile/locales/de.json
@@ -500,5 +500,103 @@
     "saveChanges": "Änderungen Speichern",
     "nameUpdated": "Dein Name wurde erfolgreich aktualisiert",
     "failedToUpdate": "Fehler beim Aktualisieren des Namens. Bitte erneut versuchen."
+  },
+  "integrations": {
+    "title": "Integrationen",
+    "description": "Verbinde deine Lieblings-Apps und -Dienste, um Workflows zu automatisieren und die Fähigkeiten deines Agenten zu erweitern.",
+    "connectApps": "Verbinde deine Apps",
+    "externalApps": "Externe Apps",
+    "externalAppsDescription": "Beliebte Apps & Dienste verbinden",
+    "customMcpServers": "Benutzerdefinierte MCP-Server",
+    "customMcpDescription": "HTTP-basierte Integrationen hinzufügen",
+    "composioApps": "Composio Apps",
+    "composioAppsDescription": "Mit Hunderten von Geschäftsanwendungen verbinden",
+    "connected": "Verbunden",
+    "connectedToAgent": "Mit diesem Agenten verbunden",
+    "available": "Verfügbare Apps",
+    "connect": "Verbinden",
+    "setup": "Einrichten",
+    "manage": "Verwalten",
+    "searchPlaceholder": "Integrationen suchen...",
+    "noConnected": "Keine Integrationen verbunden",
+    "noConnectedDescription": "Verbinde deine Lieblings-Apps, um zu beginnen",
+    "toolsEnabled": "{{count}} Tools aktiviert",
+    "connectionSuccess": "Erfolgreich verbunden!",
+    "connectionError": "Verbindung fehlgeschlagen",
+    "connecting": "Verbindung wird hergestellt...",
+    "disconnect": "Trennen",
+    "noAppsFound": "Keine Apps gefunden",
+    "tryDifferentSearch": "Versuche einen anderen Suchbegriff",
+    "loadingIntegrations": "Integrationen werden geladen...",
+    "failedToLoad": "Laden fehlgeschlagen",
+    "retry": "Erneut versuchen",
+    "appDetails": {
+      "developer": "Entwickler",
+      "tools": "Tools",
+      "connections": "{{count}} Verbindung{{plural}} bereit",
+      "chooseHowToConnect": "Wähle, wie du verbinden möchtest",
+      "noToolsFound": "Keine Tools gefunden",
+      "toolsAvailableAfterSetup": "+{{count}} weitere Tools nach Einrichtung verfügbar"
+    },
+    "connector": {
+      "connectTo": "Mit {{app}} verbinden",
+      "selectConnection": "Wähle eine Verbindung oder erstelle eine neue",
+      "createFirstConnection": "Erstelle deine erste Verbindung",
+      "useExistingConnection": "Vorhandene Verbindung verwenden",
+      "profilesConnected": "{{count}} Profil{{plural}} bereits verbunden",
+      "createNewConnection": "Neue Verbindung erstellen",
+      "connectNewAccount": "Neues {{app}}-Konto verbinden",
+      "cancel": "Abbrechen",
+      "continue": "Weiter",
+      "selectAnOption": "Wähle eine Option",
+      "createNewProfile": "Neues Profil erstellen",
+      "chooseNameForConnection": "Wähle einen Namen für diese Verbindung",
+      "profileName": "Profilname",
+      "profileNamePlaceholder": "{{app}}-Konto",
+      "nameAvailable": "Name verfügbar",
+      "nameAlreadyTaken": "Dieser Name wird bereits verwendet",
+      "creating": "Wird erstellt...",
+      "completeInBrowser": "Im Browser abschließen",
+      "authenticateInstructions": "Bitte authentifiziere dich im Browserfenster und kehre dann hierher zurück",
+      "reopenBrowser": "Browser erneut öffnen",
+      "completedAuthentication": "Authentifizierung abgeschlossen",
+      "goBack": "Zurück",
+      "allSet": "Alles bereit",
+      "connectionReady": "Deine {{app}}-Verbindung ist bereit",
+      "createdOn": "Erstellt am {{date}}"
+    },
+    "toolsSelector": {
+      "configureTools": "{{app}}-Tools konfigurieren",
+      "selectTools": "Wähle Tools für deinen Agenten",
+      "readyToConfigureTools": "Bereit zum Konfigurieren",
+      "selected": "{{count}} von {{total}} ausgewählt",
+      "selectAll": "Alle auswählen",
+      "deselectAll": "Alle abwählen",
+      "loadingTools": "Tools werden geladen...",
+      "failedToLoadTools": "Laden fehlgeschlagen",
+      "noToolsAvailable": "Keine Tools verfügbar",
+      "noToolsDescription": "Diese Integration hat keine Tools",
+      "addingTools": "Tools werden hinzugefügt...",
+      "addTool": "{{count}} Tool hinzufügen",
+      "addTools": "{{count}} Tools hinzufügen",
+      "toolsAddedSuccess": "{{count}} {{app}}-Tools hinzugefügt!",
+      "failedToSaveTools": "Speichern fehlgeschlagen."
+    },
+    "customMcp": {
+      "title": "Benutzerdefiniertes MCP",
+      "description": "Verbindung zu einem benutzerdefinierten Model Control Protocol Server herstellen",
+      "serverUrl": "Server-URL",
+      "serverUrlPlaceholder": "https://ihr-mcp-server.com",
+      "serverName": "Servername",
+      "serverNamePlaceholder": "Mein Benutzerdefinierter MCP Server",
+      "discoveringTools": "Tools werden entdeckt...",
+      "discoverTools": "Tools Entdecken",
+      "enterValidUrl": "Bitte geben Sie eine gültige HTTP- oder HTTPS-URL ein.",
+      "enterServerName": "Bitte geben Sie einen Namen für diesen MCP-Server ein.",
+      "noToolsFound": "Keine Tools gefunden. Bitte überprüfen Sie Ihre Konfiguration.",
+      "failedToConnect": "Verbindung zum MCP-Server fehlgeschlagen. Bitte überprüfen Sie Ihre Konfiguration.",
+      "toolsConfigured": "Benutzerdefiniertes MCP hinzugefügt",
+      "toolsConfiguredMessage": "{{count}} Tools konfiguriert"
+    }
   }
 }
