--- a/apps/mobile/locales/en.json
+++ b/apps/mobile/locales/en.json
@@ -572,21 +572,101 @@
   },
   "integrations": {
     "title": "Integrations",
+    "description": "Connect your favorite apps and services to automate workflows and extend your agent's capabilities.",
+    "connectApps": "Connect your Apps",
+    "externalApps": "External Apps",
+    "externalAppsDescription": "Connect popular apps & services",
+    "customMcpServers": "Custom MCP Servers",
+    "customMcpDescription": "Add custom HTTP-based integrations",
+    "composioApps": "Composio Apps",
+    "composioAppsDescription": "Connect to hundreds of business applications and services",
     "connected": "Connected",
     "connectedToAgent": "Connected to this agent",
     "available": "Available Apps",
     "connect": "Connect",
+    "setup": "Setup",
     "manage": "Manage",
     "searchPlaceholder": "Search integrations...",
     "noConnected": "No connected integrations",
     "noConnectedDescription": "Connect your favorite apps to get started",
     "toolsEnabled": "{{count}} tools enabled",
-    "connectionSuccess": "Connected successfully",
+    "connectionSuccess": "Connected successfully!",
     "connectionError": "Connection failed",
     "connecting": "Connecting...",
     "disconnect": "Disconnect",
     "noAppsFound": "No apps found",
-    "tryDifferentSearch": "Try a different search term"
+    "tryDifferentSearch": "Try a different search term",
+    "loadingIntegrations": "Loading integrations...",
+    "failedToLoad": "Failed to load apps",
+    "retry": "Retry",
+    "appDetails": {
+      "developer": "Developer",
+      "tools": "Tools",
+      "connections": "{{count}} connection{{plural}} ready",
+      "chooseHowToConnect": "Choose how to connect",
+      "noToolsFound": "No tools found for this integration",
+      "toolsAvailableAfterSetup": "+{{count}} more tools available after setup"
+    },
+    "connector": {
+      "connectTo": "Connect to {{app}}",
+      "selectConnection": "Select a connection or create a new one",
+      "createFirstConnection": "Create your first connection",
+      "useExistingConnection": "Use Existing Connection",
+      "profilesConnected": "{{count}} profile{{plural}} already connected",
+      "createNewConnection": "Create New Connection",
+      "connectNewAccount": "Connect a new {{app}} account",
+      "cancel": "Cancel",
+      "continue": "Continue",
+      "selectAnOption": "Select an option",
+      "createNewProfile": "Create New Profile",
+      "chooseNameForConnection": "Choose a name for this connection",
+      "profileName": "Profile Name",
+      "profileNamePlaceholder": "{{app}} Account",
+      "nameAvailable": "Name available",
+      "nameAlreadyTaken": "This name is already taken",
+      "creating": "Creating...",
+      "completeInBrowser": "Complete in Browser",
+      "authenticateInstructions": "Please authenticate in the browser window, then return here when finished",
+      "reopenBrowser": "Reopen browser",
+      "completedAuthentication": "I've Completed Authentication",
+      "goBack": "Go Back",
+      "allSet": "All Set",
+      "connectionReady": "Your {{app}} connection is ready",
+      "createdOn": "Created {{date}}"
+    },
+    "toolsSelector": {
+      "configureTools": "Configure {{app}} Tools",
+      "selectTools": "Select tools to add to your agent",
+      "readyToConfigureTools": "Ready to configure tools",
+      "selected": "{{count}} of {{total}} selected",
+      "selectAll": "Select All",
+      "deselectAll": "Deselect All",
+      "loadingTools": "Loading tools...",
+      "failedToLoadTools": "Failed to Load Tools",
+      "noToolsAvailable": "No Tools Available",
+      "noToolsDescription": "This integration doesn't have any tools to configure",
+      "addingTools": "Adding Tools...",
+      "addTool": "Add {{count}} Tool",
+      "addTools": "Add {{count}} Tools",
+      "toolsAddedSuccess": "Added {{count}} {{app}} tools to your agent!",
+      "failedToSaveTools": "Failed to save tools. Check console for details."
+    },
+    "customMcp": {
+      "title": "Custom MCP",
+      "description": "Connect to a custom Model Control Protocol server",
+      "serverUrl": "Server URL",
+      "serverUrlPlaceholder": "https://your-mcp-server.com",
+      "serverName": "Server Name",
+      "serverNamePlaceholder": "My Custom MCP Server",
+      "discoveringTools": "Discovering Tools...",
+      "discoverTools": "Discover Tools",
+      "enterValidUrl": "Please enter a valid HTTP or HTTPS URL.",
+      "enterServerName": "Please enter a name for this MCP server.",
+      "noToolsFound": "No tools found. Please check your configuration.",
+      "failedToConnect": "Failed to connect to the MCP server. Please check your configuration.",
+      "toolsConfigured": "Custom MCP Added",
+      "toolsConfiguredMessage": "{{count}} tools configured"
+    }
   },
   "loading": {
     "threads": "Loading chats...",
