--- a/apps/mobile/locales/es.json
+++ b/apps/mobile/locales/es.json
@@ -515,5 +515,103 @@
     "saveChanges": "Guardar Cambios",
     "nameUpdated": "Tu nombre se ha actualizado correctamente",
     "failedToUpdate": "Error al actualizar el nombre. Inténtalo de nuevo."
+  },
+  "integrations": {
+    "title": "Integraciones",
+    "description": "Conecta tus aplicaciones y servicios favoritos para automatizar flujos de trabajo y ampliar las capacidades de tu agente.",
+    "connectApps": "Conecta tus Apps",
+    "externalApps": "Aplicaciones Externas",
+    "externalAppsDescription": "Conecta aplicaciones y servicios populares",
+    "customMcpServers": "Servidores MCP Personalizados",
+    "customMcpDescription": "Agrega integraciones personalizadas basadas en HTTP",
+    "composioApps": "Aplicaciones Composio",
+    "composioAppsDescription": "Conéctate a cientos de aplicaciones empresariales y servicios",
+    "connected": "Conectado",
+    "connectedToAgent": "Conectado a este agente",
+    "available": "Aplicaciones Disponibles",
+    "connect": "Conectar",
+    "setup": "Configurar",
+    "manage": "Gestionar",
+    "searchPlaceholder": "Buscar integraciones...",
+    "noConnected": "Sin integraciones conectadas",
+    "noConnectedDescription": "Conecta tus aplicaciones favoritas para comenzar",
+    "toolsEnabled": "{{count}} herramientas habilitadas",
+    "connectionSuccess": "¡Conectado exitosamente!",
+    "connectionError": "Conexión fallida",
+    "connecting": "Conectando...",
+    "disconnect": "Desconectar",
+    "noAppsFound": "No se encontraron aplicaciones",
+    "tryDifferentSearch": "Prueba un término de búsqueda diferente",
+    "loadingIntegrations": "Cargando integraciones...",
+    "failedToLoad": "Error al cargar aplicaciones",
+    "retry": "Reintentar",
+    "appDetails": {
+      "developer": "Desarrollador",
+      "tools": "Herramientas",
+      "connections": "{{count}} conexión{{plural}} lista{{plural}}",
+      "chooseHowToConnect": "Elige cómo conectar",
+      "noToolsFound": "No se encontraron herramientas para esta integración",
+      "toolsAvailableAfterSetup": "+{{count}} herramientas más disponibles después de la configuración"
+    },
+    "connector": {
+      "connectTo": "Conectar a {{app}}",
+      "selectConnection": "Selecciona una conexión o crea una nueva",
+      "createFirstConnection": "Crea tu primera conexión",
+      "useExistingConnection": "Usar Conexión Existente",
+      "profilesConnected": "{{count}} perfil{{plural}} ya conectado{{plural}}",
+      "createNewConnection": "Crear Nueva Conexión",
+      "connectNewAccount": "Conectar una nueva cuenta de {{app}}",
+      "cancel": "Cancelar",
+      "continue": "Continuar",
+      "selectAnOption": "Selecciona una opción",
+      "createNewProfile": "Crear Nuevo Perfil",
+      "chooseNameForConnection": "Elige un nombre para esta conexión",
+      "profileName": "Nombre del Perfil",
+      "profileNamePlaceholder": "Cuenta de {{app}}",
+      "nameAvailable": "Nombre disponible",
+      "nameAlreadyTaken": "Este nombre ya está en uso",
+      "creating": "Creando...",
+      "completeInBrowser": "Completar en el Navegador",
+      "authenticateInstructions": "Por favor autentica en la ventana del navegador, luego regresa aquí cuando hayas terminado",
+      "reopenBrowser": "Reabrir navegador",
+      "completedAuthentication": "He Completado la Autenticación",
+      "goBack": "Volver",
+      "allSet": "Todo Listo",
+      "connectionReady": "Tu conexión con {{app}} está lista",
+      "createdOn": "Creado el {{date}}"
+    },
+    "toolsSelector": {
+      "configureTools": "Configurar Herramientas de {{app}}",
+      "selectTools": "Selecciona herramientas para agregar a tu agente",
+      "readyToConfigureTools": "Listo para configurar herramientas",
+      "selected": "{{count}} de {{total}} seleccionadas",
+      "selectAll": "Seleccionar Todas",
+      "deselectAll": "Deseleccionar Todas",
+      "loadingTools": "Cargando herramientas...",
+      "failedToLoadTools": "Error al Cargar Herramientas",
+      "noToolsAvailable": "No Hay Herramientas Disponibles",
+      "noToolsDescription": "Esta integración no tiene herramientas para configurar",
+      "addingTools": "Agregando Herramientas...",
+      "addTool": "Agregar {{count}} Herramienta",
+      "addTools": "Agregar {{count}} Herramientas",
+      "toolsAddedSuccess": "¡Agregadas {{count}} herramientas de {{app}} a tu agente!",
+      "failedToSaveTools": "Error al guardar herramientas. Revisa la consola para más detalles."
+    },
+    "customMcp": {
+      "title": "MCP Personalizado",
+      "description": "Conectar a un servidor de Protocolo de Control de Modelo personalizado",
+      "serverUrl": "URL del Servidor",
+      "serverUrlPlaceholder": "https://tu-servidor-mcp.com",
+      "serverName": "Nombre del Servidor",
+      "serverNamePlaceholder": "Mi Servidor MCP Personalizado",
+      "discoveringTools": "Descubriendo Herramientas...",
+      "discoverTools": "Descubrir Herramientas",
+      "enterValidUrl": "Por favor ingresa una URL HTTP o HTTPS válida.",
+      "enterServerName": "Por favor ingresa un nombre para este servidor MCP.",
+      "noToolsFound": "No se encontraron herramientas. Por favor verifica tu configuración.",
+      "failedToConnect": "No se pudo conectar al servidor MCP. Por favor verifica tu configuración.",
+      "toolsConfigured": "MCP Personalizado Agregado",
+      "toolsConfiguredMessage": "{{count}} herramientas configuradas"
+    }
   }
 }
