--- a/apps/mobile/locales/fr.json
+++ b/apps/mobile/locales/fr.json
@@ -515,5 +515,103 @@
     "saveChanges": "Sauvegarder",
     "nameUpdated": "Ton nom a été mis à jour avec succès",
     "failedToUpdate": "Échec de la mise à jour du nom. Réessaie."
+  },
+  "integrations": {
+    "title": "Intégrations",
+    "description": "Connecte tes applications et services préférés pour automatiser les flux de travail et étendre les capacités de ton agent.",
+    "connectApps": "Connecte tes Apps",
+    "externalApps": "Applications Externes",
+    "externalAppsDescription": "Connecter des applications et services populaires",
+    "customMcpServers": "Serveurs MCP Personnalisés",
+    "customMcpDescription": "Ajouter des intégrations HTTP personnalisées",
+    "composioApps": "Applications Composio",
+    "composioAppsDescription": "Se connecter à des centaines d'applications commerciales",
+    "connected": "Connecté",
+    "connectedToAgent": "Connecté à cet agent",
+    "available": "Applications Disponibles",
+    "connect": "Connecter",
+    "setup": "Configurer",
+    "manage": "Gérer",
+    "searchPlaceholder": "Rechercher des intégrations...",
+    "noConnected": "Aucune intégration connectée",
+    "noConnectedDescription": "Connecte tes applications préférées pour commencer",
+    "toolsEnabled": "{{count}} outils activés",
+    "connectionSuccess": "Connecté avec succès!",
+    "connectionError": "Échec de la connexion",
+    "connecting": "Connexion...",
+    "disconnect": "Déconnecter",
+    "noAppsFound": "Aucune application trouvée",
+    "tryDifferentSearch": "Essaie un terme de recherche différent",
+    "loadingIntegrations": "Chargement des intégrations...",
+    "failedToLoad": "Échec du chargement",
+    "retry": "Réessayer",
+    "appDetails": {
+      "developer": "Développeur",
+      "tools": "Outils",
+      "connections": "{{count}} connexion{{plural}} prête{{plural}}",
+      "chooseHowToConnect": "Choisis comment te connecter",
+      "noToolsFound": "Aucun outil trouvé",
+      "toolsAvailableAfterSetup": "+{{count}} outils disponibles après config"
+    },
+    "connector": {
+      "connectTo": "Se connecter à {{app}}",
+      "selectConnection": "Sélectionne une connexion ou crée-en une",
+      "createFirstConnection": "Crée ta première connexion",
+      "useExistingConnection": "Utiliser une Connexion Existante",
+      "profilesConnected": "{{count}} profil{{plural}} connecté{{plural}}",
+      "createNewConnection": "Créer une Nouvelle Connexion",
+      "connectNewAccount": "Connecter un nouveau compte {{app}}",
+      "cancel": "Annuler",
+      "continue": "Continuer",
+      "selectAnOption": "Sélectionne une option",
+      "createNewProfile": "Créer un Nouveau Profil",
+      "chooseNameForConnection": "Choisis un nom pour cette connexion",
+      "profileName": "Nom du Profil",
+      "profileNamePlaceholder": "Compte {{app}}",
+      "nameAvailable": "Nom disponible",
+      "nameAlreadyTaken": "Ce nom est déjà utilisé",
+      "creating": "Création...",
+      "completeInBrowser": "Compléter dans le Navigateur",
+      "authenticateInstructions": "Authentifie-toi dans le navigateur, puis reviens ici",
+      "reopenBrowser": "Rouvrir le navigateur",
+      "completedAuthentication": "J'ai Terminé l'Authentification",
+      "goBack": "Retour",
+      "allSet": "Tout est Prêt",
+      "connectionReady": "Ta connexion {{app}} est prête",
+      "createdOn": "Créé le {{date}}"
+    },
+    "toolsSelector": {
+      "configureTools": "Configurer les Outils {{app}}",
+      "selectTools": "Sélectionne les outils pour ton agent",
+      "readyToConfigureTools": "Prêt à configurer",
+      "selected": "{{count}} sur {{total}} sélectionné{{plural}}",
+      "selectAll": "Tout Sélectionner",
+      "deselectAll": "Tout Désélectionner",
+      "loadingTools": "Chargement des outils...",
+      "failedToLoadTools": "Échec du Chargement",
+      "noToolsAvailable": "Aucun Outil Disponible",
+      "noToolsDescription": "Cette intégration n'a pas d'outils",
+      "addingTools": "Ajout des Outils...",
+      "addTool": "Ajouter {{count}} Outil",
+      "addTools": "Ajouter {{count}} Outils",
+      "toolsAddedSuccess": "{{count}} outils {{app}} ajoutés!",
+      "failedToSaveTools": "Échec de la sauvegarde."
+    },
+    "customMcp": {
+      "title": "MCP Personnalisé",
+      "description": "Se connecter à un serveur de protocole de contrôle de modèle personnalisé",
+      "serverUrl": "URL du Serveur",
+      "serverUrlPlaceholder": "https://votre-serveur-mcp.com",
+      "serverName": "Nom du Serveur",
+      "serverNamePlaceholder": "Mon Serveur MCP Personnalisé",
+      "discoveringTools": "Découverte des Outils...",
+      "discoverTools": "Découvrir les Outils",
+      "enterValidUrl": "Veuillez entrer une URL HTTP ou HTTPS valide.",
+      "enterServerName": "Veuillez entrer un nom pour ce serveur MCP.",
+      "noToolsFound": "Aucun outil trouvé. Veuillez vérifier votre configuration.",
+      "failedToConnect": "Échec de la connexion au serveur MCP. Veuillez vérifier votre configuration.",
+      "toolsConfigured": "MCP Personnalisé Ajouté",
+      "toolsConfiguredMessage": "{{count}} outils configurés"
+    }
   }
 }
