--- a/apps/mobile/locales/it.json
+++ b/apps/mobile/locales/it.json
@@ -494,6 +494,104 @@
     "saveChanges": "Salva Modifiche",
     "nameUpdated": "Il tuo nome è stato aggiornato con successo",
     "failedToUpdate": "Errore nell'aggiornare il nome. Riprova."
+  },
+  "integrations": {
+    "title": "Integrazioni",
+    "description": "Connetti le tue app e servizi preferiti per automatizzare i flussi di lavoro ed estendere le capacità del tuo agente.",
+    "connectApps": "Connetti le tue App",
+    "externalApps": "App Esterne",
+    "externalAppsDescription": "Connetti app e servizi popolari",
+    "customMcpServers": "Server MCP Personalizzati",
+    "customMcpDescription": "Aggiungi integrazioni personalizzate basate su HTTP",
+    "composioApps": "App Composio",
+    "composioAppsDescription": "Connettiti a centinaia di applicazioni aziendali",
+    "connected": "Connesso",
+    "connectedToAgent": "Connesso a questo agente",
+    "available": "App Disponibili",
+    "connect": "Connetti",
+    "setup": "Configura",
+    "manage": "Gestisci",
+    "searchPlaceholder": "Cerca integrazioni...",
+    "noConnected": "Nessuna integrazione connessa",
+    "noConnectedDescription": "Connetti le tue app preferite per iniziare",
+    "toolsEnabled": "{{count}} strumenti abilitati",
+    "connectionSuccess": "Connesso con successo!",
+    "connectionError": "Connessione fallita",
+    "connecting": "Connessione...",
+    "disconnect": "Disconnetti",
+    "noAppsFound": "Nessuna app trovata",
+    "tryDifferentSearch": "Prova un termine di ricerca diverso",
+    "loadingIntegrations": "Caricamento integrazioni...",
+    "failedToLoad": "Caricamento fallito",
+    "retry": "Riprova",
+    "appDetails": {
+      "developer": "Sviluppatore",
+      "tools": "Strumenti",
+      "connections": "{{count}} connessione{{plural}} pronta{{plural}}",
+      "chooseHowToConnect": "Scegli come connetterti",
+      "noToolsFound": "Nessuno strumento trovato",
+      "toolsAvailableAfterSetup": "+{{count}} strumenti disponibili dopo la configurazione"
+    },
+    "connector": {
+      "connectTo": "Connetti a {{app}}",
+      "selectConnection": "Seleziona una connessione o creane una nuova",
+      "createFirstConnection": "Crea la tua prima connessione",
+      "useExistingConnection": "Usa Connessione Esistente",
+      "profilesConnected": "{{count}} profilo{{plural}} già connesso{{plural}}",
+      "createNewConnection": "Crea Nuova Connessione",
+      "connectNewAccount": "Connetti nuovo account {{app}}",
+      "cancel": "Annulla",
+      "continue": "Continua",
+      "selectAnOption": "Seleziona un'opzione",
+      "createNewProfile": "Crea Nuovo Profilo",
+      "chooseNameForConnection": "Scegli un nome per questa connessione",
+      "profileName": "Nome Profilo",
+      "profileNamePlaceholder": "Account {{app}}",
+      "nameAvailable": "Nome disponibile",
+      "nameAlreadyTaken": "Questo nome è già in uso",
+      "creating": "Creazione...",
+      "completeInBrowser": "Completa nel Browser",
+      "authenticateInstructions": "Autenticati nella finestra del browser, poi torna qui quando hai finito",
+      "reopenBrowser": "Riapri browser",
+      "completedAuthentication": "Ho Completato l'Autenticazione",
+      "goBack": "Indietro",
+      "allSet": "Tutto Pronto",
+      "connectionReady": "La tua connessione con {{app}} è pronta",
+      "createdOn": "Creato il {{date}}"
+    },
+    "toolsSelector": {
+      "configureTools": "Configura Strumenti {{app}}",
+      "selectTools": "Seleziona strumenti da aggiungere al tuo agente",
+      "readyToConfigureTools": "Pronto per configurare",
+      "selected": "{{count}} di {{total}} selezionati",
+      "selectAll": "Seleziona Tutti",
+      "deselectAll": "Deseleziona Tutti",
+      "loadingTools": "Caricamento strumenti...",
+      "failedToLoadTools": "Caricamento Fallito",
+      "noToolsAvailable": "Nessuno Strumento Disponibile",
+      "noToolsDescription": "Questa integrazione non ha strumenti",
+      "addingTools": "Aggiunta Strumenti...",
+      "addTool": "Aggiungi {{count}} Strumento",
+      "addTools": "Aggiungi {{count}} Strumenti",
+      "toolsAddedSuccess": "{{count}} strumenti {{app}} aggiunti!",
+      "failedToSaveTools": "Salvataggio fallito."
+    },
+    "customMcp": {
+      "title": "MCP Personalizzato",
+      "description": "Connetti a un server di Protocollo di Controllo Modello personalizzato",
+      "serverUrl": "URL del Server",
+      "serverUrlPlaceholder": "https://tuo-server-mcp.com",
+      "serverName": "Nome del Server",
+      "serverNamePlaceholder": "Il Mio Server MCP Personalizzato",
+      "discoveringTools": "Scoperta Strumenti...",
+      "discoverTools": "Scopri Strumenti",
+      "enterValidUrl": "Inserisci un URL HTTP o HTTPS valido.",
+      "enterServerName": "Inserisci un nome per questo server MCP.",
+      "noToolsFound": "Nessuno strumento trovato. Controlla la tua configurazione.",
+      "failedToConnect": "Connessione al server MCP fallita. Controlla la tua configurazione.",
+      "toolsConfigured": "MCP Personalizzato Aggiunto",
+      "toolsConfiguredMessage": "{{count}} strumenti configurati"
+    }
   }
 }
 
