--- a/apps/mobile/locales/ja.json
+++ b/apps/mobile/locales/ja.json
@@ -495,5 +495,103 @@
     "saveChanges": "変更を保存",
     "nameUpdated": "名前が正常に更新されました",
     "failedToUpdate": "名前の更新に失敗しました。もう一度お試しください。"
+  },
+  "integrations": {
+    "title": "統合",
+    "description": "お気に入りのアプリやサービスを接続して、ワークフローを自動化し、エージェントの機能を拡張します。",
+    "connectApps": "アプリを接続",
+    "externalApps": "外部アプリ",
+    "externalAppsDescription": "人気のアプリとサービスを接続",
+    "customMcpServers": "カスタムMCPサーバー",
+    "customMcpDescription": "HTTPベースのカスタム統合を追加",
+    "composioApps": "Composioアプリ",
+    "composioAppsDescription": "数百のビジネスアプリケーションに接続",
+    "connected": "接続済み",
+    "connectedToAgent": "このエージェントに接続済み",
+    "available": "利用可能なアプリ",
+    "connect": "接続",
+    "setup": "セットアップ",
+    "manage": "管理",
+    "searchPlaceholder": "統合を検索...",
+    "noConnected": "接続された統合はありません",
+    "noConnectedDescription": "お気に入りのアプリを接続して開始",
+    "toolsEnabled": "{{count}}個のツールが有効",
+    "connectionSuccess": "接続に成功しました！",
+    "connectionError": "接続に失敗しました",
+    "connecting": "接続中...",
+    "disconnect": "切断",
+    "noAppsFound": "アプリが見つかりません",
+    "tryDifferentSearch": "別の検索語を試してください",
+    "loadingIntegrations": "統合を読み込み中...",
+    "failedToLoad": "読み込みに失敗しました",
+    "retry": "再試行",
+    "appDetails": {
+      "developer": "開発者",
+      "tools": "ツール",
+      "connections": "{{count}}個の接続が準備完了",
+      "chooseHowToConnect": "接続方法を選択",
+      "noToolsFound": "ツールが見つかりません",
+      "toolsAvailableAfterSetup": "セットアップ後に+{{count}}個のツールが利用可能"
+    },
+    "connector": {
+      "connectTo": "{{app}}に接続",
+      "selectConnection": "接続を選択するか新しく作成",
+      "createFirstConnection": "最初の接続を作成",
+      "useExistingConnection": "既存の接続を使用",
+      "profilesConnected": "{{count}}個のプロファイルが接続済み",
+      "createNewConnection": "新しい接続を作成",
+      "connectNewAccount": "新しい{{app}}アカウントを接続",
+      "cancel": "キャンセル",
+      "continue": "続ける",
+      "selectAnOption": "オプションを選択",
+      "createNewProfile": "新しいプロファイルを作成",
+      "chooseNameForConnection": "この接続の名前を選択",
+      "profileName": "プロファイル名",
+      "profileNamePlaceholder": "{{app}}アカウント",
+      "nameAvailable": "名前は利用可能です",
+      "nameAlreadyTaken": "この名前は既に使用されています",
+      "creating": "作成中...",
+      "completeInBrowser": "ブラウザで完了",
+      "authenticateInstructions": "ブラウザウィンドウで認証し、完了したらここに戻ってください",
+      "reopenBrowser": "ブラウザを再度開く",
+      "completedAuthentication": "認証を完了しました",
+      "goBack": "戻る",
+      "allSet": "準備完了",
+      "connectionReady": "{{app}}への接続が準備できました",
+      "createdOn": "作成日：{{date}}"
+    },
+    "toolsSelector": {
+      "configureTools": "{{app}}ツールを設定",
+      "selectTools": "エージェントに追加するツールを選択",
+      "readyToConfigureTools": "設定の準備完了",
+      "selected": "{{count}}/{{total}}選択済み",
+      "selectAll": "すべて選択",
+      "deselectAll": "すべて解除",
+      "loadingTools": "ツールを読み込み中...",
+      "failedToLoadTools": "読み込みに失敗",
+      "noToolsAvailable": "利用可能なツールはありません",
+      "noToolsDescription": "この統合には設定するツールがありません",
+      "addingTools": "ツールを追加中...",
+      "addTool": "{{count}}個のツールを追加",
+      "addTools": "{{count}}個のツールを追加",
+      "toolsAddedSuccess": "{{count}}個の{{app}}ツールを追加しました！",
+      "failedToSaveTools": "保存に失敗しました。"
+    },
+    "customMcp": {
+      "title": "カスタムMCP",
+      "description": "カスタムモデルコントロールプロトコルサーバーに接続",
+      "serverUrl": "サーバーURL",
+      "serverUrlPlaceholder": "https://your-mcp-server.com",
+      "serverName": "サーバー名",
+      "serverNamePlaceholder": "マイカスタムMCPサーバー",
+      "discoveringTools": "ツールを検出中...",
+      "discoverTools": "ツールを検出",
+      "enterValidUrl": "有効なHTTPまたはHTTPS URLを入力してください。",
+      "enterServerName": "このMCPサーバーの名前を入力してください。",
+      "noToolsFound": "ツールが見つかりません。設定を確認してください。",
+      "failedToConnect": "MCPサーバーへの接続に失敗しました。設定を確認してください。",
+      "toolsConfigured": "カスタムMCPを追加しました",
+      "toolsConfiguredMessage": "{{count}}個のツールを設定しました"
+    }
   }
 }
