--- a/apps/mobile/locales/pt.json
+++ b/apps/mobile/locales/pt.json
@@ -495,6 +495,104 @@
     "saveChanges": "Salvar Mudanças",
     "nameUpdated": "Seu nome foi atualizado com sucesso",
     "failedToUpdate": "Erro ao atualizar nome. Tente novamente."
+  },
+  "integrations": {
+    "title": "Integrações",
+    "description": "Conecte seus aplicativos e serviços favoritos para automatizar fluxos de trabalho e estender as capacidades do seu agente.",
+    "connectApps": "Conecte seus Apps",
+    "externalApps": "Aplicativos Externos",
+    "externalAppsDescription": "Conectar aplicativos e serviços populares",
+    "customMcpServers": "Servidores MCP Personalizados",
+    "customMcpDescription": "Adicionar integrações personalizadas baseadas em HTTP",
+    "composioApps": "Aplicativos Composio",
+    "composioAppsDescription": "Conectar-se a centenas de aplicações empresariais",
+    "connected": "Conectado",
+    "connectedToAgent": "Conectado a este agente",
+    "available": "Aplicativos Disponíveis",
+    "connect": "Conectar",
+    "setup": "Configurar",
+    "manage": "Gerenciar",
+    "searchPlaceholder": "Buscar integrações...",
+    "noConnected": "Sem integrações conectadas",
+    "noConnectedDescription": "Conecte seus aplicativos favoritos para começar",
+    "toolsEnabled": "{{count}} ferramentas ativadas",
+    "connectionSuccess": "Conectado com sucesso!",
+    "connectionError": "Falha na conexão",
+    "connecting": "Conectando...",
+    "disconnect": "Desconectar",
+    "noAppsFound": "Nenhum aplicativo encontrado",
+    "tryDifferentSearch": "Tente um termo de busca diferente",
+    "loadingIntegrations": "Carregando integrações...",
+    "failedToLoad": "Falha ao carregar",
+    "retry": "Tentar novamente",
+    "appDetails": {
+      "developer": "Desenvolvedor",
+      "tools": "Ferramentas",
+      "connections": "{{count}} conexão{{plural}} pronta{{plural}}",
+      "chooseHowToConnect": "Escolha como conectar",
+      "noToolsFound": "Nenhuma ferramenta encontrada",
+      "toolsAvailableAfterSetup": "+{{count}} ferramentas disponíveis após configuração"
+    },
+    "connector": {
+      "connectTo": "Conectar a {{app}}",
+      "selectConnection": "Selecione uma conexão ou crie uma nova",
+      "createFirstConnection": "Crie sua primeira conexão",
+      "useExistingConnection": "Usar Conexão Existente",
+      "profilesConnected": "{{count}} perfil{{plural}} já conectado{{plural}}",
+      "createNewConnection": "Criar Nova Conexão",
+      "connectNewAccount": "Conectar nova conta {{app}}",
+      "cancel": "Cancelar",
+      "continue": "Continuar",
+      "selectAnOption": "Selecione uma opção",
+      "createNewProfile": "Criar Novo Perfil",
+      "chooseNameForConnection": "Escolha um nome para esta conexão",
+      "profileName": "Nome do Perfil",
+      "profileNamePlaceholder": "Conta {{app}}",
+      "nameAvailable": "Nome disponível",
+      "nameAlreadyTaken": "Este nome já está em uso",
+      "creating": "Criando...",
+      "completeInBrowser": "Completar no Navegador",
+      "authenticateInstructions": "Por favor, autentique na janela do navegador e retorne aqui quando terminar",
+      "reopenBrowser": "Reabrir navegador",
+      "completedAuthentication": "Concluí a Autenticação",
+      "goBack": "Voltar",
+      "allSet": "Tudo Pronto",
+      "connectionReady": "Sua conexão com {{app}} está pronta",
+      "createdOn": "Criado em {{date}}"
+    },
+    "toolsSelector": {
+      "configureTools": "Configurar Ferramentas {{app}}",
+      "selectTools": "Selecione ferramentas para adicionar ao seu agente",
+      "readyToConfigureTools": "Pronto para configurar",
+      "selected": "{{count}} de {{total}} selecionadas",
+      "selectAll": "Selecionar Todas",
+      "deselectAll": "Desselecionar Todas",
+      "loadingTools": "Carregando ferramentas...",
+      "failedToLoadTools": "Falha ao Carregar",
+      "noToolsAvailable": "Nenhuma Ferramenta Disponível",
+      "noToolsDescription": "Esta integração não possui ferramentas",
+      "addingTools": "Adicionando Ferramentas...",
+      "addTool": "Adicionar {{count}} Ferramenta",
+      "addTools": "Adicionar {{count}} Ferramentas",
+      "toolsAddedSuccess": "{{count}} ferramentas {{app}} adicionadas!",
+      "failedToSaveTools": "Falha ao salvar."
+    },
+    "customMcp": {
+      "title": "MCP Personalizado",
+      "description": "Conectar a um servidor de Protocolo de Controle de Modelo personalizado",
+      "serverUrl": "URL do Servidor",
+      "serverUrlPlaceholder": "https://seu-servidor-mcp.com",
+      "serverName": "Nome do Servidor",
+      "serverNamePlaceholder": "Meu Servidor MCP Personalizado",
+      "discoveringTools": "Descobrindo Ferramentas...",
+      "discoverTools": "Descobrir Ferramentas",
+      "enterValidUrl": "Por favor, insira uma URL HTTP ou HTTPS válida.",
+      "enterServerName": "Por favor, insira um nome para este servidor MCP.",
+      "noToolsFound": "Nenhuma ferramenta encontrada. Por favor, verifique sua configuração.",
+      "failedToConnect": "Falha ao conectar ao servidor MCP. Por favor, verifique sua configuração.",
+      "toolsConfigured": "MCP Personalizado Adicionado",
+      "toolsConfiguredMessage": "{{count}} ferramentas configuradas"
+    }
   }
 }
 
