--- a/apps/mobile/locales/zh.json
+++ b/apps/mobile/locales/zh.json
@@ -500,5 +500,103 @@
     "saveChanges": "保存更改",
     "nameUpdated": "你的名字已成功更新",
     "failedToUpdate": "更新名字失败。请再试一次。"
+  },
+  "integrations": {
+    "title": "集成",
+    "description": "连接你喜爱的应用和服务，自动化工作流程并扩展你的智能体能力。",
+    "connectApps": "连接你的应用",
+    "externalApps": "外部应用",
+    "externalAppsDescription": "连接热门应用和服务",
+    "customMcpServers": "自定义MCP服务器",
+    "customMcpDescription": "添加基于HTTP的自定义集成",
+    "composioApps": "Composio应用",
+    "composioAppsDescription": "连接数百个商业应用和服务",
+    "connected": "已连接",
+    "connectedToAgent": "已连接到此智能体",
+    "available": "可用应用",
+    "connect": "连接",
+    "setup": "设置",
+    "manage": "管理",
+    "searchPlaceholder": "搜索集成...",
+    "noConnected": "没有已连接的集成",
+    "noConnectedDescription": "连接你喜爱的应用开始使用",
+    "toolsEnabled": "已启用{{count}}个工具",
+    "connectionSuccess": "连接成功！",
+    "connectionError": "连接失败",
+    "connecting": "连接中...",
+    "disconnect": "断开连接",
+    "noAppsFound": "未找到应用",
+    "tryDifferentSearch": "尝试不同的搜索词",
+    "loadingIntegrations": "加载集成中...",
+    "failedToLoad": "加载失败",
+    "retry": "重试",
+    "appDetails": {
+      "developer": "开发者",
+      "tools": "工具",
+      "connections": "{{count}}个连接已就绪",
+      "chooseHowToConnect": "选择连接方式",
+      "noToolsFound": "未找到工具",
+      "toolsAvailableAfterSetup": "设置后可用+{{count}}个工具"
+    },
+    "connector": {
+      "connectTo": "连接到{{app}}",
+      "selectConnection": "选择连接或创建新连接",
+      "createFirstConnection": "创建你的第一个连接",
+      "useExistingConnection": "使用现有连接",
+      "profilesConnected": "已连接{{count}}个配置文件",
+      "createNewConnection": "创建新连接",
+      "connectNewAccount": "连接新的{{app}}账户",
+      "cancel": "取消",
+      "continue": "继续",
+      "selectAnOption": "选择一个选项",
+      "createNewProfile": "创建新配置文件",
+      "chooseNameForConnection": "为此连接选择名称",
+      "profileName": "配置文件名称",
+      "profileNamePlaceholder": "{{app}}账户",
+      "nameAvailable": "名称可用",
+      "nameAlreadyTaken": "此名称已被使用",
+      "creating": "创建中...",
+      "completeInBrowser": "在浏览器中完成",
+      "authenticateInstructions": "请在浏览器窗口中进行身份验证，完成后返回这里",
+      "reopenBrowser": "重新打开浏览器",
+      "completedAuthentication": "我已完成身份验证",
+      "goBack": "返回",
+      "allSet": "全部完成",
+      "connectionReady": "你的{{app}}连接已就绪",
+      "createdOn": "创建于{{date}}"
+    },
+    "toolsSelector": {
+      "configureTools": "配置{{app}}工具",
+      "selectTools": "选择要添加到智能体的工具",
+      "readyToConfigureTools": "准备配置工具",
+      "selected": "已选择{{count}}/{{total}}",
+      "selectAll": "全选",
+      "deselectAll": "取消全选",
+      "loadingTools": "加载工具中...",
+      "failedToLoadTools": "加载失败",
+      "noToolsAvailable": "没有可用工具",
+      "noToolsDescription": "此集成没有可配置的工具",
+      "addingTools": "添加工具中...",
+      "addTool": "添加{{count}}个工具",
+      "addTools": "添加{{count}}个工具",
+      "toolsAddedSuccess": "已添加{{count}}个{{app}}工具！",
+      "failedToSaveTools": "保存失败。"
+    },
+    "customMcp": {
+      "title": "自定义MCP",
+      "description": "连接到自定义模型控制协议服务器",
+      "serverUrl": "服务器URL",
+      "serverUrlPlaceholder": "https://your-mcp-server.com",
+      "serverName": "服务器名称",
+      "serverNamePlaceholder": "我的自定义MCP服务器",
+      "discoveringTools": "正在发现工具...",
+      "discoverTools": "发现工具",
+      "enterValidUrl": "请输入有效的HTTP或HTTPS URL。",
+      "enterServerName": "请为此MCP服务器输入名称。",
+      "noToolsFound": "未找到工具。请检查您的配置。",
+      "failedToConnect": "无法连接到MCP服务器。请检查您的配置。",
+      "toolsConfigured": "已添加自定义MCP",
+      "toolsConfiguredMessage": "已配置{{count}}个工具"
+    }
   }
 }
